--- a/SystemAnsvarlig/MainWindow.xaml
+++ b/SystemAnsvarlig/MainWindow.xaml
@@ -2,35 +2,33 @@
     x:Class="SystemAnsvarlig.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:Behaviours="clr-namespace:MahApps.Metro.Behaviours;assembly=MahApps.Metro"
     xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
     xmlns:ignore="http://www.galasoft.ch/ignore"
     xmlns:local="clr-namespace:SystemAnsvarlig"
-    	xmlns:Behaviours="clr-namespace:MahApps.Metro.Behaviours;assembly=MahApps.Metro"
-
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:userControls="clr-namespace:SystemAnsvarlig.Views"
-    xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
     Title="IT - Systemer"
     Width="500"
     Height="600"
-    AllowsTransparency="True" 
+    AllowsTransparency="True"
     Background="Transparent"
-    FontFamily="{DynamicResource MaterialDesignFont}"
     BorderThickness="0"
-    TextElement.FontSize="13"
-    
-    WindowTitleBrush="Transparent"
+    FontFamily="{DynamicResource MaterialDesignFont}"
     NonActiveWindowTitleBrush="Transparent"
+    TextElement.FontSize="13"
     TextElement.FontWeight="Regular"
     TextElement.Foreground="{DynamicResource MaterialDesignBody}"
     TextOptions.TextFormattingMode="Ideal"
     TextOptions.TextRenderingMode="Auto"
+    WindowTitleBrush="Transparent"
     mc:Ignorable="d ignore">
     <i:Interaction.Behaviors>
-        <Behaviours:BorderlessWindowBehavior/>
-       
+        <Behaviours:BorderlessWindowBehavior />
+
     </i:Interaction.Behaviors>
     <Controls:MetroWindow.Resources>
         <ResourceDictionary>
@@ -44,7 +42,6 @@
     </Controls:MetroWindow.DataContext>
     <materialDesign:DialogHost
         x:Name="Host"
-        
         MinWidth="{Binding Width, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:MainWindow}}}"
         MaxWidth="{Binding Width, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:MainWindow}}}"
         HorizontalAlignment="Stretch"
@@ -60,7 +57,7 @@
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="158*" />
-                <ColumnDefinition Width="63*"/>
+                <ColumnDefinition Width="63*" />
             </Grid.ColumnDefinitions>
 
 
@@ -69,48 +66,46 @@
 
             <materialDesign:Card
                 x:Name="SearchCard"
+                Grid.Column="0"
+                Grid.ColumnSpan="1"
                 Margin="5"
                 HorizontalAlignment="Stretch"
-                VerticalAlignment="Stretch" 
-                Grid.Column="0"
-                    Grid.ColumnSpan="1">
+                VerticalAlignment="Stretch">
 
                 <TextBox
                     x:Name="SearchBox"
-                    TextAlignment="Justify"
-                    
-                    materialDesign:TextFieldAssist.Hint="Søk her"
                     Width="{Binding ActualWidth, ElementName=SearchCard, UpdateSourceTrigger=PropertyChanged}"
-                    
-                    HorizontalAlignment="Left"
                     Margin="5"
+                    HorizontalAlignment="Left"
                     Controls:TextBoxHelper.Watermark="Søk"
+                    materialDesign:HintAssist.Hint="Søk her"
                     FontSize="25"
                     Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}"
+                    TextAlignment="Justify"
                     TextWrapping="Wrap" />
 
 
             </materialDesign:Card>
             <Button
-                materialDesign:ShadowAssist.ShadowDepth="Depth3"
                 x:Name="button"
                 Grid.Column="1"
-               
+                Height="Auto"
                 Margin="0,10,10,10"
                 HorizontalAlignment="Stretch"
                 VerticalAlignment="Stretch"
+                materialDesign:ShadowAssist.ShadowDepth="Depth3"
                 Command="{Binding CreateCommand}"
-                Content="Lag ny" Height="Auto" />
+                Content="Lag ny" />
             <ListView
                 x:Name="listView"
                 Grid.Row="1"
-                
+                Grid.ColumnSpan="2"
                 HorizontalAlignment="Stretch"
                 VerticalAlignment="Stretch"
                 Background="Transparent"
                 BorderThickness="0"
                 ItemsSource="{Binding ListOfSystems, UpdateSourceTrigger=PropertyChanged}"
-                SelectedItem="{Binding CurrentDisplayedSystem}" Grid.ColumnSpan="2">
+                SelectedItem="{Binding CurrentDisplayedSystem}">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <userControls:SystemCard Margin="-7" />
@@ -132,12 +127,13 @@
             </ListView>
             <StackPanel
                 Grid.Row="1"
+                Grid.Column="1"
                 Width="0"
                 Height="0"
                 Margin="111.34,5,0,0"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Top"
-                AllowDrop="True" Grid.Column="1" />
+                AllowDrop="True" />
 
 
 
